# todo

backend/: db.sqlite3  pyproject.toml
backend/core/: settings.py  urls.py
